# scc

./: .clangd  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README  Todo.md  go.mod  main.go  makefile  todo.md  versions.txt
.github/workflows/: ci.yml  codeql.yml  go.yml  greetings.yml  makefile.yml
INSTALL/: README
SCC/: error.c  error.h  lexer.c  main.c  main.cc
asm/: token.inc  token.s
demo/: exit.lisp  text.lisp
docs/: asm  cli  os
lib/: lexer.h
libscc/: lexer.h
lisp/: main.go
lisp/asm/: asm.go  asm_test.go
lisp/asm/assembly/: data.s  test.s  write.s
lisp/assembly/: exit.s  init.s
lisp/cli/: cli.go
lisp/compiler/: compiler.go
lisp/go/: main.go
lisp/go/asm/: asm.go  asm_test.go
lisp/go/asm/assembly/: data.s  exit.s  exit0.s  init.s  write.s
lisp/go/cli/: cli.go  cli_test.go  main.go
lisp/go/compiler/: compiler.go
lisp/go/lisp/: main.go
lisp/go/types/: types.go
lisp/types/: types.go
scc/: error.h  generator.c  lexer.c  lexer.h  lexer.hpp  main.c  main.cc  main.go  toplev.cc  toplev.h
scc/asm/: asm.go  asm_test.go
scc/asm/assembly/x86-64/: write.s
scc/basic/: basic.c  basic.h
scc/cli/: cli.go
scc/compiler/: compiler.go
scc/types/: types.go
testdata/: exit.lisp
testdata/lisp/: exit.cl
vcc/: main.go
vcc/asm/: asm.go  asm_test.go
vcc/asm/assembly/x86-64/: test.s
vcc/compiler/: compiler.go
vcc/types/: types.go
